tests/valid/ListGenerator_Valid_12.whiley
public export method test():
    bool[] ls = [false; 2]
    assert ls == [false,false]
    assert |ls| == 2
