tests/invalid/Tuple_Invalid_9.whiley
public export method test():
    //
    (int a, bool b) = (1,2)
